--- a/app/src/main/res/layout/dialog_video_res_picker_1_item.xml
+++ b/app/src/main/res/layout/dialog_video_res_picker_1_item.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    Video Format Item Layout:
+    - Displays video resolution and file size information
+    - Used as an item in a grid/list of available formats
+    - Features rounded border with elevation
+    - Centered text with primary and secondary information
+-->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <!--
+        Main container LinearLayout:
+        - Wraps all content vertically
+        - Centered in parent RelativeLayout
+        - 5dp margin on all sides
+        - Rounded border background
+        - 2dp elevation for shadow
+    -->
     <LinearLayout
         android:id="@+id/main_layout"
         android:layout_width="match_parent"
@@ -16,6 +32,17 @@
         android:orientation="vertical"
         tools:ignore="UselessParent">
 
+        <!--
+            Resolution TextView (Primary information):
+            - Bold text style
+            - Primary text color
+            - Sub-heading text size
+            - Centered horizontally
+            - 5dp side margins
+            - 8dp top margin
+            - Single line with ellipsis
+            - Custom font family
+        -->
         <TextView
             android:id="@+id/txt_resolution"
             android:layout_width="match_parent"
@@ -32,6 +59,17 @@
             android:textSize="@dimen/sub_heading_text_size"
             android:textStyle="bold" />
 
+        <!--
+            File Size TextView (Secondary information):
+            - Semi-transparent (alpha 0.5)
+            - Secondary text color
+            - Message text size
+            - Centered horizontally
+            - 5dp side margins
+            - 8dp bottom margin
+            - Single line with ellipsis
+            - Custom font family
+        -->
         <TextView
             android:id="@+id/txt_file_size"
             android:layout_width="match_parent"
