--- a/app/src/main/res/layout/frag_brow_1_top_popup_1.xml
+++ b/app/src/main/res/layout/frag_brow_1_top_popup_1.xml
@@ -1,4 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+    LAYOUT: Browser Options Menu Dialog
+    PURPOSE: Provides action menu for web browser with navigation and utility functions
+    FEATURES:
+    - Navigation controls (back/forward)
+    - Page sharing/copying options
+    - Browser integration actions
+    - Download management
+    - Help and feedback options
+    STYLE: Inherits from @style/style_dialog
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +17,13 @@
     android:layout_height="wrap_content"
     tools:ignore="UseAppTint,UseCompatTextViewDrawableXml">
 
+    <!--
+        MAIN CONTAINER: Material CardView
+        - 5dp side margins, 10dp top/bottom margins
+        - Background color from resources
+        - 10dp corner radius for rounded corners
+        - 2dp elevation for subtle shadow
+    -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,11 +35,19 @@
         app:cardCornerRadius="@dimen/_10"
         app:cardElevation="@dimen/_2">
 
+        <!-- Vertical layout for all menu items -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!--
+                NAVIGATION BUTTON BAR
+                - Fixed 45dp height
+                - Surface color background
+                - Contains back/forward/save bookmark buttons
+                - Equal weight distribution (3 buttons)
+            -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_45"
@@ -33,6 +58,7 @@
                 android:background="@color/color_surface"
                 android:orientation="horizontal">
 
+                <!-- Back Button -->
                 <ImageButton
                     android:id="@+id/btn_webpage_back"
                     android:layout_width="0dp"
@@ -45,6 +71,7 @@
                     android:tint="@color/color_secondary"
                     tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
 
+                <!-- Forward Button -->
                 <ImageButton
                     android:id="@+id/btn_webpage_forward"
                     android:layout_width="0dp"
@@ -57,6 +84,7 @@
                     android:tint="@color/color_secondary"
                     tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
 
+                <!-- Save Bookmark Button -->
                 <ImageButton
                     android:id="@+id/btn_save_bookmark"
                     android:layout_width="0dp"
@@ -68,9 +96,15 @@
                     android:src="@drawable/ic_button_save_bookmark"
                     android:tint="@color/color_secondary"
                     tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
-
             </LinearLayout>
 
+            <!--
+                SHARE PAGE BUTTON
+                - Negative selector background for touch feedback
+                - 10dp start margin, 15dp end margin
+                - Contains share icon and text
+                - 8dp internal margin
+            -->
             <LinearLayout
                 android:id="@+id/btn_share_webpage_url"
                 android:layout_width="match_parent"
@@ -100,6 +134,12 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!-- COPY URL BUTTON
+                - Negative selector background for touch feedback
+                - 10dp start margin, 15dp end margin
+                - Contains share icon and text
+                - 8dp internal margin
+            -->
             <LinearLayout
                 android:id="@+id/btn_copy_webpage_url"
                 android:layout_width="match_parent"
@@ -129,6 +169,12 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!-- OPEN IN SYSTEM BROWSER BUTTON
+                - Negative selector background for touch feedback
+                - 10dp start margin, 15dp end margin
+                - Contains share icon and text
+                - 8dp internal margin
+                -->
             <LinearLayout
                 android:id="@+id/btn_open_with_system_browser"
                 android:layout_width="match_parent"
@@ -158,6 +204,12 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!-- NEW DOWNLOAD BUTTON
+                - Negative selector background for touch feedback
+                - 10dp start margin, 15dp end margin
+                - Contains share icon and text
+                - 8dp internal margin
+                -->
             <LinearLayout
                 android:id="@+id/btn_add_download_task_editor"
                 android:layout_width="match_parent"
@@ -187,6 +239,12 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!-- OPEN BOOKMARKS BUTTON
+                - Negative selector background for touch feedback
+                - 10dp start margin, 15dp end margin
+                - Contains share icon and text
+                - 8dp internal margin
+                -->
             <LinearLayout
                 android:id="@+id/btn_open_bookmark"
                 android:layout_width="match_parent"
@@ -216,6 +274,12 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!-- OPEN HISTORY BUTTON
+                - Negative selector background for touch feedback
+                - 10dp start margin, 15dp end margin
+                - Contains share icon and text
+                - 8dp internal margin
+                -->
             <LinearLayout
                 android:id="@+id/btn_open_history"
                 android:layout_width="match_parent"
@@ -245,6 +309,12 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!-- HOW TO USE BUTTON
+                - Negative selector background for touch feedback
+                - 10dp start margin, 15dp end margin
+                - Contains share icon and text
+                - 8dp internal margin
+                -->
             <LinearLayout
                 android:id="@+id/btn_how_to_use"
                 android:layout_width="match_parent"
@@ -274,6 +344,12 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!-- SEND FEEDBACK BUTTON
+                - Negative selector background for touch feedback
+                - 10dp start margin, 15dp end margin
+                - Contains share icon and text
+                - 8dp internal margin
+                -->
             <LinearLayout
                 android:id="@+id/btn_open_feedback"
                 android:layout_width="match_parent"
