--- a/app/src/main/res/layout/frag_down_3_active_1_onclick_1.xml
+++ b/app/src/main/res/layout/frag_down_3_active_1_onclick_1.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    LAYOUT: Download Task Management Dialog
+    PURPOSE: Provides comprehensive controls for managing active downloads
+    FEATURES:
+    - File thumbnail preview with metadata
+    - Dual action buttons (resume/pause)
+    - File management options (delete/rename/clear)
+    - Sharing capabilities (copy/share links)
+    - Discovery and information options
+    STYLE: Inherits from @style/style_dialog
+    BEHAVIOR:
+    - Shows file thumbnail and details
+    - Provides visual feedback for actions
+    - Groups related functions logically
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +22,13 @@
     android:layout_height="wrap_content"
     tools:ignore="UseAppTint,UseCompatTextViewDrawableXml">
 
+    <!--
+        PRIMARY CONTAINER: Material CardView
+        - 5dp side margins, 10dp top/bottom margins
+        - Background color from @color/color_background
+        - 10dp corner radius
+        - 5dp elevation for shadow effect
+    -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,11 +40,19 @@
         app:cardCornerRadius="@dimen/_10"
         app:cardElevation="@dimen/_5">
 
+        <!-- Main content layout -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!--
+                FILE INFO CARD
+                - Clickable container with selector background
+                - 8dp margins all around
+                - 2dp elevation
+                - Contains thumbnail and metadata
+            -->
             <RelativeLayout
                 android:id="@+id/btn_file_info_card"
                 android:layout_width="match_parent"
@@ -36,6 +66,13 @@
                 android:elevation="@dimen/_2"
                 tools:ignore="DuplicateSpeakableTextCheck">
 
+                <!--
+                    THUMBNAIL CONTAINER
+                    - Fixed size (85x55dp)
+                    - 5dp margins (except right)
+                    - 5dp corner radius
+                    - Background color from resources
+                -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/thumbnail_container"
                     android:layout_width="@dimen/_85"
@@ -47,6 +84,12 @@
                     app:cardBackgroundColor="@color/color_background"
                     app:cardCornerRadius="@dimen/_5">
 
+                    <!--
+                        THUMBNAIL IMAGE
+                        - Center-cropped to fill container
+                        - Default "no thumbnail" image
+                        - Accessibility optimized (not important)
+                    -->
                     <ImageView
                         android:id="@+id/img_file_thumbnail"
                         android:layout_width="match_parent"
@@ -57,9 +100,13 @@
                         android:scaleType="centerCrop"
                         android:src="@drawable/image_no_thumb_available"
                         tools:ignore="ImageContrastCheck" />
-
                 </androidx.cardview.widget.CardView>
 
+                <!--
+                    METADATA CONTAINER
+                    - Positioned right of thumbnail
+                    - Contains title, URL and action button
+                -->
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -69,6 +116,13 @@
                     android:layout_toEndOf="@+id/thumbnail_container"
                     android:orientation="vertical">
 
+                    <!--
+                        FILE TITLE
+                        - Marquee scrolling for long text
+                        - Bold style
+                        - Single line with ellipsis
+                        - Positioned left of open button
+                    -->
                     <TextView
                         android:id="@+id/txt_file_title"
                         android:layout_width="match_parent"
@@ -88,6 +142,12 @@
                         android:textSize="@dimen/normal_text_size"
                         android:textStyle="bold" />
 
+                    <!--
+                        URL CONTAINER
+                        - Semi-transparent background
+                        - Positioned below title
+                        - Left-aligned before open button
+                    -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -97,6 +157,12 @@
                         android:background="@drawable/rounded_transparent_white_f5"
                         android:orientation="vertical">
 
+                        <!--
+                            FILE URL
+                            - Small text size
+                            - Single line with ellipsis
+                            - 5dp horizontal margins
+                        -->
                         <TextView
                             android:id="@+id/txt_file_url"
                             android:layout_width="match_parent"
@@ -115,6 +181,13 @@
                             tools:ignore="TextContrastCheck" />
                     </LinearLayout>
 
+                    <!--
+                        OPEN FILE BUTTON
+                        - Fixed size (30x30dp)
+                        - Right-aligned
+                        - Centered vertically
+                        - Tinted with secondary color
+                    -->
                     <ImageView
                         android:id="@+id/img_open_file"
                         android:layout_width="@dimen/_30"
@@ -130,16 +203,26 @@
                         android:tint="@color/color_on_secondary"
                         android:visibility="visible"
                         tools:ignore="ImageContrastCheck" />
-
                 </RelativeLayout>
             </RelativeLayout>
 
+            <!--
+                ACTION BUTTON ROWS
+                Each row contains two equal-width buttons with:
+                - 8dp side margins
+                - 3dp between buttons
+                - Negative selector background
+                - Icon and text label
+            -->
+
+            <!-- Download Control Row -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
+                <!-- Resume Button -->
                 <LinearLayout
                     android:id="@+id/btn_resume_download"
                     android:layout_width="0dp"
@@ -169,6 +252,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Pause Button -->
                 <LinearLayout
                     android:id="@+id/btn_pause_download"
                     android:layout_width="0dp"
@@ -199,12 +283,14 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <!-- File Management Row -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
+                <!-- Clear from List Button -->
                 <LinearLayout
                     android:id="@+id/btn_clear_download"
                     android:layout_width="0dp"
@@ -234,6 +320,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Delete File Button -->
                 <LinearLayout
                     android:id="@+id/btn_delete_download"
                     android:layout_width="0dp"
@@ -258,18 +345,20 @@
                         android:ellipsize="end"
                         android:fontFamily="@font/application_font_family"
                         android:singleLine="true"
-                        android:text="@string/text_delete_file"
+                        android:text="@string/text_delete_the_file"
                         android:textColor="@color/color_text_primary"
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
             </LinearLayout>
 
+            <!-- Sharing Row -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
+                <!-- Share Link Button -->
                 <LinearLayout
                     android:id="@+id/btn_share_download_url"
                     android:layout_width="0dp"
@@ -299,6 +388,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Copy Link Button -->
                 <LinearLayout
                     android:id="@+id/btn_copy_download_url"
                     android:layout_width="0dp"
@@ -329,12 +419,14 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <!-- File Operations Row -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
+                <!-- Rename File Button -->
                 <LinearLayout
                     android:id="@+id/btn_rename_download"
                     android:layout_width="0dp"
@@ -364,6 +456,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Discover More Button -->
                 <LinearLayout
                     android:id="@+id/btn_discover_more"
                     android:layout_width="0dp"
@@ -394,6 +487,7 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <!-- Information Button Row -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -401,6 +495,7 @@
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
+                <!-- Show Download Info Button -->
                 <LinearLayout
                     android:id="@+id/btn_show_download_information"
                     android:layout_width="0dp"
@@ -430,7 +525,6 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
             </LinearLayout>
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
