--- a/app/src/main/res/layout/frag_down_4_finish_1_row_1.xml
+++ b/app/src/main/res/layout/frag_down_4_finish_1_row_1.xml
@@ -87,7 +87,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5"
+                android:layout_marginTop="@dimen/_2"
+                android:background="@drawable/rounded_surface_color"
                 android:orientation="horizontal">
 
                 <TextView
@@ -96,6 +97,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:ellipsize="end"
+                    android:layout_marginStart="@dimen/_5"
+                    android:layout_marginTop="@dimen/_2"
+                    android:layout_marginEnd="@dimen/_5"
+                    android:layout_marginBottom="@dimen/_2"
                     android:fontFamily="@font/application_font_family"
                     android:gravity="center_vertical"
                     android:singleLine="true"
